tests/sumo/devices/rerouting/assignment/errors/disconnect_via_ignore/options.sumo
--no-step-log --no-duration-log 
--net-file=net.net.xml
--r input_trips.trips.xml
--vehroute-output=vehroutes.xml 
--ignore-route-errors
